portfolio-site/styles.css
/* ... */
.nav-link {
  color: inherit;
  font-weight: var(--fw-bold);
  font-size: var(--fs-h2);
  text-decoration: none;
}

.nav-link:hover {
  color: var(--clr-accent);
}

.nav-item {
  width: 100%;
  padding: 4em;
  text-align: center;
  transition: transform 200ms ease;
}

.nav-item:hover {
  transform: translate(3px, -2px) scale(1.1);
  transition: transform 200ms ease;
}

.nav-item:nth-of-type(1) {
  background: rgb(174, 254, 255);
  text-shadow: 1px 2px var(--clr-aqua-accent);
}
.nav-item:nth-of-type(2) {
  background: var(--clr-aqua-accent);
  text-shadow: 1px 2px var(--clr-teal-accent);
}
.nav-item:nth-of-type(3) {
  background: var(--clr-teal-accent);
  text-shadow: 1px 2px var(--clr-dark-base);
}

header.daymode .nav-item:nth-of-type(1) {
  background: var(--clr-day-paleyellow);
  text-shadow: 1px 2px var(--clr-day-drk);
}
header.daymode .nav-item:nth-of-type(2) {
  background: var(--clr-day-gold);
  text-shadow: 1px 2px var(--clr-day-drk);
}
header.daymode .nav-item:nth-of-type(3) {
  background: var(--clr-day-orange);
  text-shadow: 1px 2px var(--clr-day-drk);
}
header.daymode .nav-item:nth-of-type(4) {
  background: var(--clr-day-drk);
  text-shadow: 1px 2px var(--clr-day-drk);
}

.nav-toggle {
  padding: 0.5em;
  background: transparent;
  border: 0;
  cursor: pointer;
  position: fixed;
  right: 2em;
  top: 3em;
  z-index: 1000;
}

.nav-open .nav {
  transform: translateX(0);
}

.nav-open .nav-toggle {
  position: fixed;
}

.nav-open .hamburger {
  transform: rotate(0.125turn);
}

.nav-open .hamburger::before {
  transform: rotate(-0.25turn) translateX(6px);
}

.nav-open .hamburger::after {
  opacity: 0;
}

.hamburger {
  display: block;
  position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  background: var(--clr-off-white);
  width: 2em;
  height: 3px;
  border-radius: 1em;
  box-shadow: 2px 3px var(--clr-dark-base);
  transition: transform 250ms ease-in-out;
  z-index: 1000;
}

header.daymode .hamburger,
header.daymode .hamburger::before,
header.daymode .hamburger::after {
  box-shadow: 2px 3px var(--clr-day-drk);
}

.hamburger::before,
.hamburger::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
}

.hamburger::before {
  top: 7px;
}
.hamburger::after {
  bottom: 7px;
}

/* svg designs */

header svg {
  margin: 0;
  padding: 0;
  position: absolute;
  left: 0;
  bottom: 0;
  fill-opacity: 25%;
  min-width: 1000px;
  width: 100%;
}

header.project-header svg {
  display: none;
}

header.daymode svg {
  fill-opacity: 40%;
}
.svg-1 {
  fill: var(--clr-teal-accent);
}

.svg-2 {
  fill: var(--clr-aqua-accent);
}

.svg-3 {
  fill: var(--clr-light);
}

header.daymode .svg-3 {
  fill-opacity: 25%;
}

.svg-4 {
  fill: var(--clr-aqua-accent);
}

header.scrolled .sticky-bar {
  transform: translateY(-10px);
  z-index: 20;
}

.mobile-bar {
  opacity: 0%;
  position: fixed;
  width: 100%;
  height: 80px;
  background: var(--clr-teal-accent);
  top: 0;
  display: flex;
  align-items: center;

  transition: all 250ms ease-in-out;
}

.contact-container i {
  font-size: 2rem;
  margin-left: calc(0.3em + 2.5vw);
  color: white;
  cursor: pointer;
  opacity: 80%;
  transition: opacity 200ms ease-in-out;
}

.contact-container i:hover {
  opacity: 100%;
  transition: opacity 200ms ease-in-out;
}

.tooltip {
  position: relative;
}

.tooltip .tooltiptext {

  width: 120px;
  font-family: var(--ff-primary);
  font-size: 1rem;
  font-weight: 300;
  background-color: var(--clr-dark-75op);
  color: var(--clr-off-white);
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;

  position: absolute;
  z-index: 1;
  left: 100%;
  top: 3px;
  margin-left: 20px;

  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip:hover .tooltiptext {
  opacity: 1;
  transition: opacity 0.3s;
}

.contact-container a {
  text-decoration: none;
}

@media (max-width: 550px) {
  .mobile-bar span {
    opacity: 0%;
    transition: opacity 250ms ease-in-out;
  }

  .tooltip .tooltiptext {
    left: -110%;
    top: 100%;
    margin-top: 15px;
    margin-left: 0;
  }
}

header.scrolled button.nav-toggle {
  transform: translateY(-10px);
  transition: all 250ms ease-in-out;
}

header.scrolled .toggle-btn {
  background: var(--clr-dark-base);
  transition: all 250ms ease-in-out;
}

header.scrolled .mobile-bar {
  opacity: 100%;
  transition: all 250ms ease-in-out;
}

header.scrolled.daymode .mobile-bar {
  background-color: var(--clr-day-orange);
  transition: all 250ms ease-in-out;
  z-index: 15;
}

header.scrolled .hamburger,
header.scrolled .hamburger::before,
header.scrolled .hamburger::after {
  box-shadow: none;
}

@media (max-width: 500px) {
  header {
    height: 85vh;
  }

  header h1 {
    font-size: 2.2rem;
  }
  header p {
    font-size: 1rem;
  }

  header .CTA-buttons {
    margin-top: 2em;
  }

  .fa-star {
    display: none;
  }
  .circle {
    display: none;
  }

  .cloud-1 {
    font-size: 55px;
    top: 27%;
    left: 10%;
  }
}

/* sections & body */

section h2,
footer h2 {
  margin-top: 2em;
  text-transform: uppercase;
  font-size: 1.5rem;
  letter-spacing: 2px;
  color: var(--clr-dark-75op);
}

section h2::after,
footer h2::after {
  content: "";
  display: block;
  width: 25%;
  border-bottom-style: solid;
  border-width: 10px;
  border-image: linear-gradient(
      45deg,
      var(--clr-teal-accent),
      var(--clr-aqua-accent),
      var(--clr-light)
    )
    1;
}

section.daymode h2::after,
footer.daymode h2::after {
  border-image: linear-gradient(
      45deg,
      var(--clr-day-orange),
      var(--clr-day-gold),
      var(--clr-day-paleyellow)
    )
    1;
}

.dark-section {
  background: var(--clr-dark-base);
  transition: background-color 300ms ease-in;
}

section.daymode.dark-section,
footer.daymode.dark-section,
section.daymode .skills {
  background: var(--clr-day-drk);
  transition: background-color 300ms ease-in;
}

.skills-section h2 {
  margin-top: 4em;
}
/* ... */

